[package]
name = "eve-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
neo4rs = "0.6.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
uuid = "1.6.0"