[package]
name = "eve-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "serde_json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
neo4rs = "0.7.0-rc.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
uuid = "1.6.0"
thiserror = "1.0.50"
warp = "0.3.6"
chrono = "0.4.31"
openssl = { version = "0.10", features = ["vendored"] }
